# JNI_TUTORIAL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gradle.cmake  gradle.properties  settings.gradle
app/: build.gradle  build.gradle.plugin
app/src/main/cpp/: greetings.cpp  greetings_cmake.cpp
app/src/main/java/org/example/: App.java
app/src/test/java/org/example/: AppTest.java
